assets/styles/layout_general.css
/* === LAYOUT_GENERAL .CSS === 

        IDs and Classes
            Use IDs ("#xyz") for elements that are one time use.
            Use classes (".xyz") for things that repeat - remember DRY (Do not Repeat Yourself)

        Naming conventions
            files = use lowercase and join words using underscores 'this_is_an_example.php'
            IDs = use PascalCase
            classes = use camelCase

            use the 'object oriented css' convention, where an abject is referenced via '--'
            e.g. 
                .boxOne{} 
                .boxOne--rounded{}
                .boxOne--big{}
                .boxOne--small{}

        Layout CSS is broken down into 6 different files
        - general
        - header
        - homepage
        - services
        - about
        - contact

        It is done this way so that each part of the site can have it's own specific styling, whilst also maintaining a sitewide consistent look and feel.
        
        More info on specific parts
            - Navigation
                The main header is made up of 3 parts, the logo, small device navigation and large device navigation. All three are in fixed positions, but the visibility changes depending on the size of the viewing device.
            
            - Layout
                Then, directly underneath, is a page container (using position: absolute, margin-top: (height of the nav in px); top: 0;).
                Within that there is a sub container.
                body
                    - #Header
                    - #PageContainer - has no margin or padding.
                        > ?homepage specific content?
                        > SubContainer
                        > Footer
                General content is located inside the sub container.            

    */

/* set default HTML attributes */
/* ============================================== */
   
    body { 
        background: var(--colour-bg-primary); 
        color: var(--colour-text); 
        font-family: var(--font-family); 
        font-size: var(--font-base); 
        line-height: var(--line-height);
    }

    a, a:visited, a:active {
        color: var(--colour-primary);
        text-decoration: none;
    }

    h1, h2, h3, h4, h5, h6 {
        color: var(--colour-secondary);
        margin-bottom: 0.5rem;
    }

    p {
        margin-bottom: var(--space-3);
    }

    p:last-child{
        margin-bottom: 0;
    }

/* Containers */
/* ============================================== */

    /* only used once per page to group the entire page AFTER THE HEADER */
    #PageContainer{
        position: absolute;
        top: var(--height-header);
        width: 100%;
        padding: 0;
        border: none;
    }

    /* group all sections of content (multiple boxes) */
    #SubContainer{
        position:static;
        background: linear-gradient(to right, rgba(var(--colour-bg-secondary-transparent), 0.05), var(--colour-heading), rgba(var(--colour-bg-secondary-transparent), 0.05));
        padding: var(--space-4) 5%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content:flex-start;
        text-align: center;
        min-height: calc(100vh - (var(--height-header) + var(--height-footer)));
    }

            /* LARGER DEVICES */
            /* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */

            @media (min-width: 640px){
                #SubContainer{
                    padding: var(--space-4) 10% 0 10%;
                }
            }

            @media (min-width: 960px){
                #SubContainer{
                    padding: var(--space-4) 20% 0 20%;
                }
            }

    /* boxes are structural */
    .box{
        width: 100%;
        padding: 0;
    }

    .box--WithPadding{
        width: 100%;
        padding: var(--space-4);
    }

    /* items are for styling */
    .item{
        text-align: left;
        background: linear-gradient(to right bottom, #B9B9B9, #D9D9D9);
        margin-bottom: var(--space-4);
        border: 5px solid white;
        border-color: var(--colour-secondary);
        border-style: solid;
        border-width: var(--item-border);
    }

    .item--Heading{
        text-align: center;
        margin-top: 1rem;
        margin-bottom: 1rem;
    }

    /* remove the bottom margin from h1 headers that immediately preceed h3 */
    .item--Heading:has(+ h3){
        margin-bottom: calc(var(--space-2) * -1);       
    }

    .item--SubHeading{
        text-align: center;
        margin-top: 0;
        margin-bottom: .5rem;
        color: blue;
    }

    .item--CentreAlignedText{
        text-align: center;
    }

    .item:last-child{
        margin-bottom: var(--space-fixed-2);
    }    

    #LinkToTop{
        position: fixed;
        bottom: 15px;
        left: calc(50% - 2rem);
        display: none; /* a script changes this to 'flex' once the screen is scrolled down at all */
        padding: 0;
        height: 4rem;
        width: 4rem;
        color: var(--colour-secondary);
        background: rgba(var(--colour-primary-transparent), .9);
        border-radius: 50%;
        justify-content: center;
        align-items: center;
        text-align: unset;
        border: solid white 1px;
    }


/* Footer */
/* ============================================== */

    #Footer{
        padding: 0;
        border: none;
    }

    footer{
        position: static;
        height: var(--height-footer);
        width: 100%;
        background: var(--colour-bg-secondary);
        padding: var(--space-4);
        font-size: var(--fs-xs);
    }

/* General Classes */
/* ============================================== */

    .anchor{
        position: relative;
        top: calc((var(--height-header) + 16px) * -1);

    }
    

/* Spacing */
/* ============================================== */



/* Flex helpers */
/* ============================================== */



/* Responsive helpers */
/* ============================================== */

